# kahuna

./: .dockerignore  .env.example  .gitignore  .kahuna  .rooignore  README.md  TEST_PR_REVIEW.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  turbo.json
.github/: CODEOWNERS
.github/workflows/: claude-pr-review.yml  create-release.yml  publish-npm.yml  version-and-publish.yml
.roo/rules/: 01_PROJECT_CONTEXT.md  02_NAVIGATION_GUIDE.md  03_COGNITIVE_SOFTWARE_DEVELOPMENT.md  03_DEVELOPMENT_WORKFLOW.md  03_EMPIRICAL_DEVELOPMENT.md  04_FEEDBACK_LOOP_STRATEGY.md  04_TEST_DRIVEN_DEVELOPMENT.md  05_FEEDBACK_LOOP_STRATEGY.md
.roo/rules-analysis/: ANALYSIS_MODE.md
.roo/rules-architect/: ARCHITECT_MODE.md
.roo/rules-code/: CODE_MODE.md
.roo/rules-debug/: DEBUG_MODE.md
.roo/rules-information-architect/: INFORMATION_ARCHITECT_MODE.md
.roo/rules-librarian/: LIBRARIAN_MODE.md
.roo/rules-orchestrator/: ORCHESTRATOR_MODE.md
.roo/rules-refactor/: REFACTOR_MODE.md
.roo/rules-research/: RESEARCH_MODE.md
.roo/rules-sprint-manager/: SPRINT_MANAGER_MODE.md
apps/mcp/templates/frameworks/openai/: .gitignore  README.md  main.py  pyproject.toml
apps/mcp/templates/frameworks/openai/src/agent/: __init__.py  agents.py  tools.py
docs/: README.md
knowledge/: .gitkeep
scripts/: create-release-pr.sh  create-release.sh  generate-release-notes.sh  publish-mcp.sh  validate-version.sh
src/: index.ts
templates/frameworks/langgraph/: pyproject.toml
templates/frameworks/langgraph/src/agent/: __init__.py
(+324 files in other folders)
